# avocado-challenge

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: af60ecdb26c4_initial_tables.py  e2531efa95d0_add_created_at_and_updated_at_.py  fb02bef0fc5a_cascade_all_in_comments_task_.py
backend/controllers/src/: create_app.py
backend/controllers/src/dependencies/: tasks_dependencies.py
backend/controllers/src/dtos/: task_dtos.py
backend/controllers/src/exceptions/: handler_exceptions.py
backend/controllers/src/routes/: health.py  tasks.py
backend/controllers/tests/: conftest.py  test_add_comments_to_task_route.py  test_create_task_route.py  test_delete_task_route.py  test_get_tasks_route.py  test_task_routes.py  test_update_task_route.py
backend/domain/src/entities/: comment.py  task.py  user.py
backend/domain/src/ports/repositories/: CommentRepository.py  TaskRepository.py  UserRepository.py  __init__.py  exceptions.py
backend/infrastructure/src/adapters/: sql_alchemy_comment_repository.py
backend/infrastructure/src/adapters/sql_alchemy/: __init__.py  session.py  sql_alchemy_task_repository.py  sql_alchemy_user_repository.py
backend/scripts/: create_default_role.py  create_default_user.py
backend/settings/: constants.py
backend/use_cases/src/exceptions/: __init__.py  comment_exceptions.py  task_exceptions.py  user_exceptions.py
backend/use_cases/src/task/add_comments/: input.py  (+1 more)
backend/use_cases/tests/task/: conftest.py  test_create_use_case.py
(+42 files in other folders)
